# gex-nrf-dongle

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  fix_cube_mf.php  nrf-dongle.ioc
Inc/: crc32.h  debug.h  gex_gateway.h  main.h  minmax.h  msg_queue.h  nrf.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h  usbd_cdc_if.h  usbd_conf.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Src/: crc32.c  debug.c  dma.c  gex_gateway.c  gpio.c  main.c  msg_queue.c  nrf.c  spi.c  stm32f1xx_it.c  usart.c  usbd_cdc_if.c  usbd_desc.c
